[package]
name = "distancefyi"
version = "0.1.0"
edition = "2021"
authors = ["FYIPedia"]
description = "Haversine distance calculation and travel time estimation — async API client for distancefyi.com."
license = "MIT"
repository = "https://github.com/fyipedia/distancefyi-rs"
homepage = "https://distancefyi.com"
documentation = "https://docs.rs/distancefyi"
readme = "README.md"
keywords = ["distance", "haversine", "travel-time", "geocoding", "coordinates"]
categories = ["api-bindings", "data-structures"]

exclude = ["target/", "demo.gif", "demo.tape"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
